--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -222,6 +222,8 @@
         android:layout_marginTop="6dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/buttonbg"
+        android:clickable="true"
+        android:contentDescription="Courses"
         app:layout_constraintBottom_toTopOf="@+id/sectionBox4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
