--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#113946</color>
+    <color name="mocha">#BCA37F</color>
+    <color name="colorhint">#292929</color>
 </resources>
