--- a/app/src/main/res/layout/fragment_tab_notes.xml
+++ b/app/src/main/res/layout/fragment_tab_notes.xml
@@ -1,18 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Tab_notes">
+    android:padding="16dp"
+    tools:context=".MainActivity">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="528dp"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_notes"
+        android:layout_width="396dp"
+        android:layout_height="714dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="203dp"
-        android:text="HOTES NOTES NOTES NOTES NOTES" />
+        android:layout_marginStart="-1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_note_btn"
+        android:layout_width="82dp"
+        android:layout_height="160dp"
+
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="@color/green"
+        android:contentDescription="@string/add_a_caption"
+        android:src="@drawable/add_button"
+        app:tint="@color/mocha" />
+
+    <!--app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"-->
+    <!--app:spanCount="2"-->
+
 
 </RelativeLayout>
