--- a/app/src/main/res/layout/activity_addto_album.xml
+++ b/app/src/main/res/layout/activity_addto_album.xml
@@ -19,6 +19,17 @@
         android:padding="20dp"
         tools:ignore="UselessParent">
 
+        <TextView
+            android:id="@+id/page_title"
+            android:layout_width="348dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/upload_image"
+            android:textColor="@color/green"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            tools:ignore="RelativeOverlap" />
+
         <ImageView
             android:id="@+id/backbutton"
             android:layout_width="42dp"
@@ -47,16 +58,17 @@
             app:cardCornerRadius="5dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="356dp"
                 android:layout_height="426dp"
                 android:layout_marginBottom="100dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/uploadImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="438dp"
+                    android:layout_width="315dp"
+                    android:layout_height="311dp"
                     android:baselineAligned="false"
+                    android:contentDescription="@string/uploadimage"
                     android:scaleType="centerInside"
                     android:src="@drawable/imageg"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -64,8 +76,7 @@
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.501"
-                    android:contentDescription="@string/uploadimage" />
+                    app:layout_constraintVertical_bias="0.501" />
 
 
             </LinearLayout>
@@ -115,6 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:backgroundTint="@color/green"
+                    android:contentDescription="@string/add_album"
                     android:src="@drawable/send_button"
                     app:tint="@color/mocha"
                     tools:ignore="DuplicateSpeakableTextCheck" />
