--- a/app/src/main/res/layout/fragment_tab_files.xml
+++ b/app/src/main/res/layout/fragment_tab_files.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Tab_files">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="528dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="203dp"
-        android:text="FILES FILES FILES" />
+   <ListView
+       android:id="@+id/listview"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_marginStart="10dp"
+       android:layout_marginTop="10dp"
+       android:layout_marginEnd="10dp"
+       android:layout_marginBottom="10dp"
+       android:padding="5dp">
+   </ListView>
+
+
+   <com.google.android.material.floatingactionbutton.FloatingActionButton
+       android:id="@+id/float_btn"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentEnd="true"
+       android:layout_alignParentBottom="true"
+       android:layout_marginStart="40dp"
+       android:layout_marginTop="40dp"
+       android:layout_marginEnd="42dp"
+       android:layout_marginBottom="40dp"
+       android:backgroundTint="@color/green"
+       android:contentDescription="@string/add_album"
+       android:src="@drawable/add_button"
+       app:tint="@color/mocha"
+       tools:ignore="DuplicateSpeakableTextCheck,RelativeOverlap" />
+
 
 </RelativeLayout>
