--- a/app/src/main/res/layout/fragment_tab_files.xml
+++ b/app/src/main/res/layout/fragment_tab_files.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,6 +17,13 @@
        android:layout_marginBottom="10dp"
        android:padding="5dp">
    </ListView>
+
+   <WebView
+       android:id="@+id/Webview"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:background="@color/mocha"
+       android:visibility="gone" />
 
 
    <com.google.android.material.floatingactionbutton.FloatingActionButton
