--- a/app/src/main/res/layout/activity_addto_notes.xml
+++ b/app/src/main/res/layout/activity_addto_notes.xml
@@ -28,18 +28,16 @@
         android:id="@+id/notes_title"
         android:layout_width="336dp"
         android:layout_height="60dp"
-        android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
         android:autofillHints=""
         android:background="@drawable/textboxbg2"
         android:gravity="center"
         android:hint="@string/add_title"
         android:inputType="text"
         android:textColor="#113946"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/page_title"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
@@ -47,7 +45,7 @@
     <EditText
         android:id="@+id/notes_content"
         android:layout_width="336dp"
-        android:layout_height="400dp"
+        android:layout_height="380dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
@@ -72,43 +70,36 @@
         android:id="@+id/mic"
         android:layout_width="47dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:contentDescription="@string/mic"
         android:onClick="micCLick"
-        app:layout_constraintBottom_toTopOf="@+id/save_note_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintHorizontal_bias="0.747"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notes_content"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/voice"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
-        android:contentDescription="@string/mic" />
-
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <ImageView
         android:id="@+id/camera"
         android:layout_width="47dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:contentDescription="TODO"
+        android:focusable="true"
         android:onClick="camCLick"
-        app:layout_constraintBottom_toTopOf="@+id/save_note_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.87"
+        app:layout_constraintHorizontal_bias="0.898"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notes_content"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/camera"
-        tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck"
-        android:contentDescription="TODO"
-        android:focusable="true" />
+        tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/save_note_btn"
         android:layout_width="100dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="44dp"
         android:background="@drawable/buttonbg"
         android:fontFamily="sans-serif"
         android:gravity="center"
